--- a/StudentsManagement/StudentsManagement/UI/StudentAdd.html
+++ b/StudentsManagement/StudentsManagement/UI/StudentAdd.html
@@ -35,6 +35,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="inputCnp" class="col-lg-3 control-label">CNP</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="inputCnp" placeholder="CNP">
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <div class="col-lg-10 col-lg-offset-2">
                             <button type="reset" class="btn btn-default">Cancel</button>
                             <button type="submit" class="btn btn-primary">Submit</button>
