Student fInance and promotion details

--- a/StudentsManagement/StudentsManagement/UI/Student.html
+++ b/StudentsManagement/StudentsManagement/UI/Student.html
@@ -15,19 +15,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Students</a>
+                    <a class="navbar-brand" href="Student.html">Students</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="StudentAdd.html">Add student</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Buget<span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a id="financed">Financed</a></li>
-                                <li><a id="fee-payer">Fee payer</a></li>
-                            </ul>
-                        </li>
+                        <li><a id="financed">Finance details</a></li>
                         <li><a id="promotion">Publish promotion</a></li>
                     </ul>
                 </div>
