Added import csv file method. UI does not look good :)

--- a/StudentsManagement/StudentsManagement/UI/Student.html
+++ b/StudentsManagement/StudentsManagement/UI/Student.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-       <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -24,6 +24,12 @@
                         <li><a href="StudentAdd.html">Add student</a></li>
                         <li><a id="financed">Finance details</a></li>
                         <li><a id="promotion">Publish promotion</a></li>
+                        <li>
+                            <form>
+                                <input id="file1" name="file1" type="file" />
+                                <input id="uploadBtn" type="button" value="Upload" />
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
