Added export method, for now downloaded  csv file is without header

--- a/StudentsManagement/StudentsManagement/UI/Student.html
+++ b/StudentsManagement/StudentsManagement/UI/Student.html
@@ -26,10 +26,11 @@
                         <li><a id="promotion">Publish promotion</a></li>
                         <li>
                             <form>
-                                <input id="file1" name="file1" type="file" />
-                                <input id="uploadBtn" type="button" value="Upload" />
+                                <input id="file1" name="file1" type="file"/>
+                                <input id="uploadBtn" type="button" value="Upload"/>
                             </form>
                         </li>
+                        <li><a id="downloadBtn">Download</a></li>
                     </ul>
                 </div>
             </div>
