Student details backend

--- a/StudentsManagement/StudentsManagement/UI/StudentDetails.html
+++ b/StudentsManagement/StudentsManagement/UI/StudentDetails.html
@@ -2,8 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
+    <link href="../Content/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <h2>Student details</h2>
+    <div class="container">
+        <h2>Student details</h2>
+    </div>
 </body>
 </html>
+<script src="../Scripts/jquery-1.10.2.js"></script>
+<script src="js/Service.js"></script>
+<script src="js/StudentService.js"></script>
+<script src="js/StudentDetails.js"></script>
