--- a/StudentsManagement/StudentsManagement/UI/Student.html
+++ b/StudentsManagement/StudentsManagement/UI/Student.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <link href="../Content/bootstrap.css" rel="stylesheet" />
+    <link href="../Content/Site.css" rel="stylesheet" />
     <title></title>
 </head>
 <body>
@@ -24,13 +25,6 @@
                         <li><a href="StudentAdd.html">Add student</a></li>
                         <li><a id="financed">Finance details</a></li>
                         <li><a id="promotion">Publish promotion</a></li>
-                        <li>
-                            <form>
-                                <input id="file1" name="file1" type="file"/>
-                                <input id="uploadBtn" type="button" value="Upload"/>
-                            </form>
-                        </li>
-                        <li><a id="downloadBtn">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,14 +32,23 @@
         <table class="table table-striped table-hover ">
             <thead>
                 <tr>
-                    <th>Id</th>
                     <th>First name</th>
                     <th>Father's initial</th>
                     <th>Last name</th>
+                    <th>Student id</th>
                 </tr>
             </thead>
             <tbody id="student-table"></tbody>
         </table>
+
+        <div id="actions">
+            <form>
+                <input id="file" name="file" type="file" class="inputfile" />
+                <label for="file">Choose a file</label>
+                <input id="uploadBtn" type="button" class="btn btn-info" value="Upload" />
+            </form>
+            <button id="downloadBtn" class="btn btn-info">Download</button>
+        </div>
     </div>
 </body>
 </html>
