Javascript unit testing - Student.js unit tests.

--- a/StudentsManagement/StudentsManagement/UI/js/test/SpecRunner.html
+++ b/StudentsManagement/StudentsManagement/UI/js/test/SpecRunner.html
@@ -10,11 +10,10 @@
   <script src="lib/jasmine-2.4.1/jasmine.js"></script>
   <script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
   <script src="lib/jasmine-2.4.1/boot.js"></script>
+  <script src="../../../Scripts/jquery-1.10.2.js"></script>
+  <script src="lib/jasmine-2.4.1/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
-  <!-- include jQuery -->
-  <script src="../../../Scripts/jquery-1.10.2.js"></script>
-  <!-- include javascript to test -->
   <script src="../Student.js"></script>
 
   <!-- include spec files here... -->
