Javascript unit testing - Student.js unit tests - add tests that fails

--- a/StudentsManagement/StudentsManagement/UI/js/test/SpecRunner.html
+++ b/StudentsManagement/StudentsManagement/UI/js/test/SpecRunner.html
@@ -15,6 +15,7 @@
 
   <!-- include source files here... -->
   <script src="../Student.js"></script>
+  <script src="../StudentAdd.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/StudentSpec.js"></script>
