Create Preconditions and Postconditions javascript objects and use them in Student.js file.

--- a/StudentsManagement/StudentsManagement/UI/js/test/SpecRunner.html
+++ b/StudentsManagement/StudentsManagement/UI/js/test/SpecRunner.html
@@ -16,7 +16,8 @@
   <!-- include source files here... -->
   <script src="../exceptions.js"></script>
   <script src="../Student.js"></script>
-  <script src="../StudentAdd.js"></script>
+  <script src="../StudentService.js"></script>
+  <script src="../Service.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/StudentSpec.js"></script>
